k8s/get/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-get-task-api
  namespace: get-todo
spec:
  selector:
    app: todo-get-task-api
  ports:
    - port: 80
      targetPort: 8000
