k8s/get/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-get-task-api-ingress
  namespace: get-todo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - get.digwi.online
      secretName: get-digwi-tls
  rules:
    - host: get.digwi.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: todo-get-task-api
                port:
                  number: 80
